<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Habit/Hobby Tracker</string>
    <string name="priority_string">Congratulation Message</string>
    <string name="add_new_hobby_string">Add New Hobby/Habit</string>
    <string name="title_string">Hobby</string>
    <string name="dialog_title">Warning!!</string>
    <string name="dialog_string">You must fill out all of the text boxes!</string>
    <string name="status_string">Goal</string>
    <string name="goal_string">Enter goal number</string>
    <string name="congratulation_message_string">Enter Congratulations message</string>
    <string name="description_label_string">Description</string>
    <string name="description_string">Enter description of hobby</string>
    <string name="cancel_string">Cancel</string>
    <string name="reset_string">Reset</string>
    <string name="delete_string">Delete</string>
    <string name="increment_string">Increment</string>
    <string name="submit_string">Submit</string>
    <string name="enter_title_string">Enter Hobby</string>
    <string name="Progress_string">You have done %1$d/%2$s of your goal!</string>
    <string name="finished_string">%1$s! You have completed your habit/hobby! press the reset button
        to do it again, or the delete button if you are done!</string>
</resources>
