<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- Title -->

    <TextView
        android:id="@+id/TitleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/title_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <!-- Title -->

    <EditText
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TitleLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/enter_title_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/DescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_marginTop="8dp"
        android:text="@string/description_label_string"
        android:textAppearance="?android:attr/textAppearanceLarge" >
    </TextView>

    <!-- Title -->
    <EditText
        android:id="@+id/Description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DescriptionLabel"
        android:layout_alignParentStart="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/description_string"
        android:inputType="textShortMessage">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/goal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/Description"
        android:layout_marginTop="8dp"
        android:text="@string/status_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/goalEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/goal"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/goal_string"
        android:inputType="number">
    </EditText>

    <TextView
        android:id="@+id/congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/goalEdit"
        android:layout_marginTop="8dp"
        android:text="@string/priority_string"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/congratulation"
        android:layout_marginStart="0dp"
        android:layout_marginTop="-1dp"
        android:ems="10"
        android:hint="@string/congratulation_message_string"
        android:inputType="textShortMessage">

    </EditText>

    <TextView
        android:id="@+id/color"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/Message"
        android:layout_marginTop="8dp"
        android:text="@string/pick_color"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_below="@id/color" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/cancel_string" />

    <Button
        android:id="@+id/resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/reset_string" />

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/submit_string" />


</RelativeLayout>